// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots MultipleServicePorts SN7 MultipleServicePorts 1`] = `
<section
  className="storybook-container"
>
  <section
    className="service-port-container"
  >
    <div
      className="refresh-service-ports"
    >
      <i
        className="fa fa-sync"
        onClick={[Function]}
      />
    </div>
    <section
      className="service-port row0"
    >
      <div
        className="wrapper service-port-select"
      >
        <label>
          Service Port
        </label>
        <div
          className=" css-2b097c-container"
          onKeyDown={[Function]}
        >
          <div
            className=" css-yk16xz-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className=" css-g1d714-ValueContainer"
            >
              <div
                className=" css-1wa3eu0-placeholder"
              >
                Select...
              </div>
              <div
                className="css-b8ldur-Input"
              >
                <div
                  className=""
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-autocomplete="list"
                    autoCapitalize="none"
                    autoComplete="off"
                    autoCorrect="off"
                    disabled={false}
                    id="react-select-107-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    spellCheck="false"
                    style={
                      Object {
                        "background": 0,
                        "border": 0,
                        "boxSizing": "content-box",
                        "color": "inherit",
                        "fontSize": "inherit",
                        "label": "input",
                        "opacity": 1,
                        "outline": 0,
                        "padding": 0,
                        "width": "1px",
                      }
                    }
                    tabIndex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              className=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className=" css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className=" css-tlfecz-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="css-6q0nyr-Svg"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <em
          className="error backend-validation"
        />
      </div>
      <div
        className="wrapper vlan"
      >
        <label>
          Port Vlan
        </label>
        <div
          className="virtual-vlan"
        >
          <input
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="First select a Service Port..."
            type="text"
            value=""
          />
        </div>
        <em
          className="error"
        />
      </div>
    </section>
    <em
      className="error"
    />
    <div
      className="add-service-port"
    >
      <i
        className="fa fa-plus"
        onClick={[Function]}
      />
    </div>
  </section>
</section>
`;

exports[`Storyshots MultipleServicePorts SN8 MultipleServicePorts 1`] = `
<section
  className="storybook-container"
>
  <section
    className="service-port-container"
  >
    <div
      className="refresh-service-ports"
    >
      <i
        className="fa fa-sync"
        onClick={[Function]}
      />
    </div>
    <section
      className="service-port row0"
    >
      <div
        className="wrapper service-port-select"
      >
        <label>
          Service Port
        </label>
        <div
          className=" css-2b097c-container"
          onKeyDown={[Function]}
        >
          <div
            className=" css-yk16xz-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className=" css-g1d714-ValueContainer"
            >
              <div
                className=" css-1wa3eu0-placeholder"
              >
                Select...
              </div>
              <div
                className="css-b8ldur-Input"
              >
                <div
                  className=""
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-autocomplete="list"
                    autoCapitalize="none"
                    autoComplete="off"
                    autoCorrect="off"
                    disabled={false}
                    id="react-select-106-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    spellCheck="false"
                    style={
                      Object {
                        "background": 0,
                        "border": 0,
                        "boxSizing": "content-box",
                        "color": "inherit",
                        "fontSize": "inherit",
                        "label": "input",
                        "opacity": 1,
                        "outline": 0,
                        "padding": 0,
                        "width": "1px",
                      }
                    }
                    tabIndex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              className=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className=" css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className=" css-tlfecz-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="css-6q0nyr-Svg"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <em
          className="error backend-validation"
        />
      </div>
      <div
        className="wrapper vlan"
      >
        <label>
          Port Vlan
        </label>
        <div
          className="virtual-vlan"
        >
          <input
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="First select a Service Port..."
            type="text"
            value=""
          />
        </div>
        <em
          className="error"
        />
      </div>
    </section>
    <em
      className="error"
    />
    <div
      className="add-service-port"
    >
      <i
        className="fa fa-plus"
        onClick={[Function]}
      />
    </div>
  </section>
</section>
`;
